use minified jQuery

--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -16,7 +16,7 @@
       </form>
     </div>
 
-    <script src="../jquery-3.6.0.js"></script>
+    <script src="../jquery-3.6.0.min.js"></script>
     <script src="qunit-2.14.1.js"></script>
 
     <script src="../list.js"></script>
